added more aws cloud properties

--- a/cliente-consumer-service/src/main/resources/application.properties
+++ b/cliente-consumer-service/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.cloud.aws.endpoint=http://localhost:4566
+spring.cloud.aws.sqs.region=us-east-1
+spring.cloud.aws.credentials.access-key=access_key
+spring.cloud.aws.credentials.secret-key=secret_access_key
 spring.cloud.aws.sqs.listener.max-concurrent-messages=10
