--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,4 +4,5 @@ services:
     image: localstack/localstack
     ports:
       - '4566:4566'
-      - '4576:4576'
+        #volumes:
+        #- "./aws-init.sh:/etc/localstack/init/ready.d/aws-init.sh"
