added redis to cache adresses

--- a/cep-consumer-api/src/main/resources/application.properties
+++ b/cep-consumer-api/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.cloud.aws.sqs.region=us-east-1
 spring.cloud.aws.credentials.access-key=access_key
 spring.cloud.aws.credentials.secret-key=secret_access_key
 spring.cloud.aws.sqs.listener.max-concurrent-messages=10
+
+spring.cache.type=redis
