--- a/cep-consumer-api/pom.xml
+++ b/cep-consumer-api/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.4.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
