--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,55 @@
 version: '3'
+
+volumes:
+  prometheus_data:
+  grafana_data:
+
 services:
   localstack:
     image: localstack/localstack
     ports:
       - '4566:4566'
-        #volumes:
-        #- "./aws-init.sh:/etc/localstack/init/ready.d/aws-init.sh"
+    volumes:
+      - "./aws-init.sh:/etc/localstack/init/ready.d/aws-init.sh"
+    depends_on:
+      - db
+      - redis
+
+  db:
+    image: postgres:15.3-alpine
+    container_name: postgres-db
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: mydb
+      POSTGRES_USER: mydb
+      POSTGRES_PASSWORD: mydb
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    ports:
+      - "9090:9090"
+    network_mode: host
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    volumes:
+      - grafana_data:/var/lib/grafana
+    ports:
+      - "3000:3000"
+    network_mode: host
