--- a/cep-consumer-api/src/main/resources/application.yaml
+++ b/cep-consumer-api/src/main/resources/application.yaml
@@ -27,7 +27,7 @@ management:
     web:
       base-path: /actuator
       exposure:
-        include: health, metrics, prometheus
+        include: health, metrics, prometheus, loggers
   endpoint:
     health:
       group:
@@ -38,3 +38,6 @@ management:
           status:
             http-mapping:
               up: 207
+  info:
+    java:
+      enabled: true
